--- a/res/menu/dash_board_principal.xml
+++ b/res/menu/dash_board_principal.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.iesebre.ptfinalmp7.MainActivity" >
+    tools:context="com.iesebre.ptfinalmp7.DashBoardPrincipalActivity" >
 
     <item
         android:id="@+id/action_settings"
