--- a/res/layout/principal_layout.xml
+++ b/res/layout/principal_layout.xml
@@ -11,7 +11,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="150dp"
-        android:drawableTop="@drawable/ic_fork"
+        style="@style/DashboardButton"
+        android:drawableTop="@drawable/ic_mapa"
         android:text="@string/ubicacio" />
 
     <Button
@@ -22,7 +23,8 @@
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="50dp"
         android:layout_marginLeft="45dp"
-        android:drawableTop="@drawable/ic_launcher"
+        style="@style/DashboardButton"
+        android:drawableTop="@drawable/ic_menu"
         android:text="@string/reserva" />
 
     <Button
@@ -33,7 +35,18 @@
         android:layout_alignBottom="@+id/ButtonReserva"
         android:layout_alignParentRight="true"
         android:layout_marginRight="60dp"
-        android:drawableTop="@drawable/ic_fork"
+        style="@style/DashboardButton"
+        android:drawableTop="@drawable/ic_reserva"
         android:text="@string/carta" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:contentDescription="@string/descripcio_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="48dp"
+        android:src="@drawable/ic_fork" />
 
 </RelativeLayout>
