--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,21 +1,31 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
+  	    <style name="AppBaseTheme" parent="Theme.AppCompat.Light"> 
+  	       
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
             backward-compatibility can go here.
         -->
-    </style>
+     </style> 
 
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
+     <style name="AppTheme" parent="AppBaseTheme"> 
+         
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
+  </style>
+  <style name = "personal">
+      
+     <item name="android:background">#d9dfd6</item>
+     <item name="android:textSize">10pt</item>
+     <item name="android:textStyle">bold</item>
+     <item name="android:typeface">sans</item>
+      
+  </style>
     <style name="DashboardButton">
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:layout_width">wrap_content</item>
