--- a/res/layout/control_login.xml
+++ b/res/layout/control_login.xml
@@ -7,7 +7,8 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical" 
+        style="@style/personal">
 
         <!--
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -19,13 +20,13 @@
 
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="110dp"
             android:layout_marginBottom="49dp"
             android:layout_marginLeft="140dp"
             android:layout_marginTop="30dp"
             android:contentDescription="@string/imageP"
-            android:src="@drawable/ic_fork" />
+            android:src="@drawable/ic_fork_web" />
 
         <TextView
             android:id="@+id/textUsuari"
@@ -33,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="140dp"
             android:layout_marginBottom="2dp"
+            style="@style/personal"
             android:text="@string/usuari" />
 
         <EditText
@@ -50,8 +52,9 @@
             android:id="@+id/textContrasena"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="125dp"
+            android:layout_marginLeft="105dp"
             android:layout_marginBottom="2dp"
+            style="@style/personal"
             android:text="@string/contrasena" />
 
         <EditText
@@ -75,10 +78,17 @@
 
         <Button
             android:id="@+id/buttonLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
-            android:text="@string/Entrar" />
+            android:layout_width="270dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="25dp"
+            android:background="@drawable/button"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"
+            android:text="@string/Entrar"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp" />
     </LinearLayout>
 
 </ScrollView>
