--- a/res/layout/entrada_llista.xml
+++ b/res/layout/entrada_llista.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    style="@style/personal">
 
     <ImageView
         android:id="@+id/imageViewLlista"
@@ -19,13 +20,15 @@
             android:id="@+id/textViewTextPrincipal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView" 
+            style="@style/personal"/>
 
         <TextView
             android:id="@+id/textViewTextSecundari"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView" 
+            style="@style/personal"/>
     </LinearLayout>
 
 </LinearLayout>
