--- a/res/layout/fragment_condicions.xml
+++ b/res/layout/fragment_condicions.xml
@@ -6,11 +6,13 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.iesebre.ptfinalmp7.CondicionsActivity$PlaceholderFragment" >
+    tools:context="com.iesebre.ptfinalmp7.CondicionsActivity$PlaceholderFragment"
+    style="@style/personal" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/acepta_condicions" />
+        android:text="@string/acepta_condicions"
+        style="@style/personal" />
 
 </RelativeLayout>
