--- a/res/layout/principal_layout.xml
+++ b/res/layout/principal_layout.xml
@@ -43,11 +43,11 @@
     <ImageView
         android:id="@+id/imageView1"
         android:contentDescription="@string/descripcio_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="270dp"
+        android:layout_height="90dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/ic_fork" />
 
 </RelativeLayout>
