--- a/res/layout/formulari_layout.xml
+++ b/res/layout/formulari_layout.xml
@@ -159,8 +159,7 @@
             android:shadowDy="0"
             android:shadowRadius="5"
             android:text="@string/Entrar"
-            android:textColor="#FFFFFF"
-             />
+            android:textColor="#FFFFFF"/>
 
     </LinearLayout>
 
